--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     font-size: 20px;
     line-height: 1.5;
     background-color: yellow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 img{
