--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
     line-height: 1.5;
     background-color: yellow;
     font-family: "Bungee Tint", sans-serif;
-}
+    font-weight: 400;
+    font-style: normal;}
 
 img{
     width: 300px;
